# luckfox-frigate-cam

./: .gitattributes  .gitignore  CMakeLists.txt  DEVELOPMENT_PLAN.md  LICENSE  MAX9814_WIRING.md  MQTT_CONTRACT.md  README.md  RU_DEVELOPMENT_PLAN.md  RU_README.md  build.sh
.github/workflows/: build.yml
deploy/: S99camera.example  run_camera.sh.example
ha_integration/: configuration.yaml
include/: audio_mpi.h  camera_mpi.h  isp_control.h  mqtt_client.h
sdk/: NOTICE
sdk/lib/uclibc/: librockchip_mpp.so.0
src/: audio_mpi.cc  camera_mpi.cc  isp_control.cc  main.cc  mqtt_client.cc
